--- a/contact-me.html
+++ b/contact-me.html
@@ -10,11 +10,11 @@
     <hr>
     <form action="mailto:harfenoo1@gmail.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
-      <input type="text" name="" value=""><br>
+      <input type="text" name="yourName" value=""><br>
       <label>Your Email:</label>
-      <input type="email" name="" value=""><br>
+      <input type="email" name="yourEmail" value=""><br>
       <label>Your Message:</label><br>
-      <textarea name="name" rows="8" cols="80"></textarea><br>
+      <textarea name="yourMessage" rows="8" cols="80"></textarea><br>
       <input type="submit" name="">
     </form>
   </body>
